"Made Some Changes"

--- a/index.html
+++ b/index.html
@@ -16,15 +16,21 @@
         </div>
         <div class="menu">
             <ul>
-                <li><a href="">Win</a></li>
-                <li><a href="">Participate</a></li>
-                <li><a href="">Grow</a></li>
-                <li><a href="">Earn</a></li>
-                <li><button id="slogin">Login</button></li>
+                <li>Win</li>
+                <li>Participate</li>
+                <li>Grow</li>
+                <li>Earn</li>
             </ul>
+
+
+        </div>
+        <div class="register">
+            <button id="slogin"><a href="slogin.html">Login</a></button>
+            <a href="sregister.html">Register</a>
         </div>
         <div class="login">
             <button id="ologin">Organiser Login</button>
+            <a href="oregister.html">New Organiser</a>
         </div>
     </div>
 
@@ -38,7 +44,7 @@
         <button id="search">Find Match</button>
     </div>
 
-
+    <!-- // Sports we cater -->
     <br>
     <h1 align="center" id="sport">Sports we cater</h1>
     <br><br><br><br>
@@ -54,6 +60,8 @@
 
     </div>
     <br><br><br>
+
+    <!-- // SportsmenBenefit -->
     <div class="sportsmenBenefit">
         <br>
         <h1 align="center" id="sbene">Sportsmen Benefit</h1>
@@ -74,6 +82,7 @@
         </ul>
     </div>
 
+    <!-- // Organiser Benefit -->
     <div class="organizerBenefit">
         <h1 align="center">Organiser Benefit</h1>
         <ul>
@@ -91,6 +100,8 @@
             </li>
         </ul>
     </div>
+
+    <!-- // Footer -->
     <div class="footer">
         <br>
         <p>Copyright &copy; 2022 - 2023 | All rights reserved</p>
